# EvolutionaryGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Robogami/: Note.txt
cmake/: DLL_Copy_Command.cmake  Generate_Javascript_UI.cmake  GetGitRevisionDescription.cmake  add_js_ui_simulation_protocol.reg.in  evo_paths.h.in  git_commit_hash.cpp.in  git_commit_hash.txt.in  remove_js_ui_simulation_protocol.reg.in  result_analysis.m.in  robot_design.m.in  sensitivity_analysis.m.in  task_launcher.py.in  task_scheduler.m.in  task_scheduling.m.in  urdfdom_cmakelists_patched.txt  urdfparser_cmakelists_patched.txt  user_input_analysis.m.in
generator/: CMakeLists.txt
generator/include/: EvoGenerator.h  EvoParams.h  GenerateDemoRobogamiRobot.h  GenerateDemoRobot.h  MeshInfo.h  RobogamiLibrary.h  RobotRepresentation.h  SimulatorParams.h  TrainingConfigs.h  UrdfExporter.h  git_commit_hash.h  sferes_ea_EvoGenEA.hpp  sferes_eval_EvoGenEval.hpp  sferes_fit_EvoGenFitness.hpp  sferes_fit_RobogamiFitness.hpp  sferes_fit_UrdfFitness.hpp  sferes_gen_EvoGenFloat.hpp  sferes_gen_Float.hpp  sferes_params.h  sferes_phen_EvoGenPhen.hpp  sferes_qd_EvoGenQD.hpp  sferes_qd_container_grid.hpp  sferes_qd_selector_uniform.hpp  sferes_stat_EvoGenStat.hpp
generator/sferes_utils/: rand.hpp  stc.hpp
generator/src/: EvoGenerator.cpp  EvoParams.cpp  GenerateDemoRobogamiRobot.cpp  GenerateDemoRobot.cpp  MeshInfo.cpp  RobogamiLibrary.cpp  RobotRepresentation.cpp  SimulatorParams.cpp  TrainingConfigs.cpp  UrdfExporter.cpp  evo_main.cpp  export_robogami_library.cpp  mesh_converter_main.cpp  process_user_inputs_main.cpp  robogami_test.cpp  robogami_visualizer_main.cpp  sferes_test.cpp  show_mesh_info_main.cpp  user_design_simulator_main.cpp  user_input_demo_main.cpp  visualizer_main.cpp
include/: ChUrdfDoc.h  RobotController.h  SimulationManager.h  UrdfExporter.h
resources/autohotkey/: screen_record.ahk  training.ahk
resources/javascript/robot_design/: designer_manual.html  designer_manual.md  index.html  style.css  user_registration.html
resources/matlab/: UI.m  load_csv.m  xml2struct.m
resources/matlab/@result_analyzer/: add_target_to_compare.m  auto_generate_virtual_results.m  build_clean_pack_results.m  build_pack_export_all_results.m  build_selected_stat.m  build_stat.m  calibrate_for_video.m  clean_result.m  clean_results.m  compare_different_version_fitness.m  compute_benchmark.m  delete_from_compare_list.m  export_archive_map.m  export_from_dropdown.m  export_group.m  export_result.m  export_robot.m  generate_all_compare_plots.m  generate_all_single_result_plots.m  generate_all_virtual_result_plots.m  generate_combined_archive_map.m  generate_deeplearning_dataset.m  generate_paper_plot1.m  generate_paper_plot2.m  generate_paper_plot3.m  generate_video_fitness_plot.m  list_bag_files_of_virtual_results.m  load_gen.m  load_group.m  load_result.m  load_result_robots.m  move_target_in_compare_list.m  mwwtest_fitness_percentage.m  mwwtest_result_coverage.m  open_folder.m  open_gen_all_plot.m  pack_result.m  pack_selected_results.m  patch_selected_stat.m  plot_avg_age_of_map.m  (+28 more)
resources/matlab/@sensitivity_analyzer/: analyze_body_length.m  refresh_result_list.m  sensitivity_analyzer.m  sensitivity_analyzer_init.m
resources/matlab/@task_scheduler/: add_job.m  archive_selected_job_file.m  edit_job.m  format_job.m  grid_dimension_update.m  load_existing_result.m  load_selected_job.m  refresh_bag_list.m  refresh_job_files_list.m  save_schedule_file.m  task_scheduler.m  task_scheduler_init.m  toggle_job_type.m
resources/matlab/@user_input_analyzer/: add_random_robots_to_bag.m  add_to_archive.m  close_plot.m  generate_paper_plot2.m  load_and_plot_ref.m  load_compare_group.m  open_plot.m  plot_archive.m  plot_ver_features.m  quiverwcolorbar.m  remove_added.m  save_bag.m  sort_added_robots_list_by_fitness.m  sort_selected_robots_list_by_fitness.m  take_screenshot.m  update_plots_range.m  user_input_analysis_init.m  user_input_analyzer.m
resources/matlab/result_analysis/: UI.m  add_new_to_compare.m  add_virtual_result.m  build_all_stat.m  build_pack_export_all_results.m  build_selected_stat.m  build_stat.m  calibrate_for_video.m  compare_different_version_fitness.m  compare_plot.m  compute_benchmark.m  delete_from_compare_list.m  delete_virtual_result.m  evaluate_with_visualization.m  export_archive_map.m  export_compare_plot_data.m  export_group.m  export_pickle_for_group.m  export_result.m  generate_all_compare_plots.m  generate_all_single_result_plots.m  generate_all_virtual_result_plots.m  generate_paper_plot.m  generate_paper_plot1.m  generate_paper_plot2.m  generate_paper_plot3.m  generate_video_fitness_plot.m  load_evo_params.m  load_gen.m  load_group.m  load_nickname.m  load_result.m  load_stat.m  load_virtual_results.m  move_compare_result.m  mwwtest.m  mwwtest_result_coverage.m  mwwtest_result_fitness.m  mwwtest_result_percent.m  mwwtest_result_stats.m  (+46 more)
resources/matlab/robot_design/: UI.m  readObj.m  reduceEdges.m
resources/matlab/sensitivity_analysis/: load_target_result.m  refresh_result_list.m  sensitivity_analysis_ui.m
resources/matlab/task_scheduler/: add_job.m  clear_bag_selection.m  launch_job_file.m  load_selected_job.m  refresh_job_files_list.m  refresh_jobs_list.m  remove_job.m  save_schedule_file.m  task_scheduler_init.m  task_scheduler_ui.m  update_job_file_info_label.m
resources/matlab/tools/: mat2np.m  shadedErrorBar.m  sigstar.m
resources/matlab/user_input_analysis/: add_random_robots_to_bag.m  clear_added_robots_list.m  clear_plot.m  close_plot.m  feature_plot_next_user.m  feature_plot_prev_user.m  generate_paper_plot.m  (+29 more)
simulator/: CMakeLists.txt
simulator/include/: ChIrrEvoGenCamera.h  ChLinkBodies.h  ChRobogami.h  ChRobot.h  ChUrdfDoc.h  RobotController.h  SimMotor.h  SimulationManager.h
simulator/src/: ChIrrEvoGenCamera.cpp  ChRobogami.cpp  ChUrdfDoc.cpp  RobotController.cpp  SimMotor.cpp  SimulationManager.cpp  chrono_test.cpp  memory_leak_test.cpp
src/: CMakeLists.txt  SimMotor.cpp  SimulationManager.cpp  UrdfExporter.cpp  chrono_test.cpp  evo_main.cpp
(+4 files in other folders)
